Update nav bar anchor links and adjust sticky header to avoid content overlap

--- a/style.css
+++ b/style.css
@@ -1,7 +1,11 @@
+
 body {
   font-family: Poppins, sans-serif;
+  scroll-behavior: smooth;
 }
-
+section {
+  scroll-margin-top: 200px; 
+}
 .container{
   margin: 20px;
   padding: 10px;
@@ -18,6 +22,7 @@ header{
   display: flex;
   align-items: center;
   justify-content: space-between;
+  flex-wrap:nowrap;
 }
 
 .logo img{
@@ -30,7 +35,8 @@ header{
 }
 
 .site-title{
-  font-size: 2.5rem;
+  font-size: 2rem;
+  font-weight:bolder;
   color: black;
   margin-left: 10px;
 }
@@ -46,7 +52,7 @@ nav .nav-links{
 .nav-links a{
     text-decoration:none;
     color:#b8408a;
-    padding: 0.2rem 1rem;
+    padding: 0.1rem 0.5rem;
     border-radius: 999px;
     font-weight: bold;
 }
@@ -207,8 +213,6 @@ label {
   font-weight: bold;
   cursor: pointer;
 }
-
-
 
 footer {
   background-color: black; 
